--- a/test/css/lambda.css
+++ b/test/css/lambda.css
@@ -1,5 +1,5 @@
 body {
-    font: 14px/18px "Helvetica Neue", Arial, sans-serif;
+    font: 14px/18px "Open Sans", "Helvetica Neue", Arial, sans-serif;
     padding-bottom: 40px;
 }
 
@@ -142,7 +142,7 @@ em {
 
 .entry .entry-body {
     margin: 20px 0 15px 0;
-    font-size: 16px;
+    /*font-size: 16px;*/
     line-height: 27px;
 }
 .entry .entry-body strong,
